--- a/src/_data/company.yml
+++ b/src/_data/company.yml
@@ -6,7 +6,8 @@ phone: 00 00 00 00 00
 tel:   
 
 email: contact@insight-mu.com
-address: Insight Consulting, Ebéne, Île Maurice
+address1: 179, route de Corbeil
+address2: 91700 Sainte-Geneviève-des-Bois
 location: 
 
 websiteAddr: bhinternet.fr
