--- a/src/_data/company.yml
+++ b/src/_data/company.yml
@@ -5,7 +5,7 @@ name:
 phone: 00 00 00 00 00
 tel:   
 
-email: contact@insight-mu.com
+email: COMMERCIAL@DMBCONSTRUCTION.COM
 address1: 179, route de Corbeil
 address2: 91700 Sainte-Geneviève-des-Bois
 location: 
