--- a/src/_data/company.yml
+++ b/src/_data/company.yml
@@ -2,10 +2,11 @@
 # CONFIG
 ####################
 name:
-phone: 00 00 00 00 00
-tel:   
+phone: 06 64 94 13 00
+tel: 0664941300
 
 email: COMMERCIAL@DMBCONSTRUCTION.COM
+address: 4 RUE DES FERMES 91700 SAINTE-GENEVIEVE-DES-BOIS
 address1: 179, route de Corbeil
 address2: 91700 Sainte-Geneviève-des-Bois
 location: 
