--- a/src/_data/company.yml
+++ b/src/_data/company.yml
@@ -5,7 +5,7 @@ name:
 phone: 06 64 94 13 00
 tel: 0664941300
 
-email: COMMERCIAL@DMBCONSTRUCTION.COM
+email: dmb.batiment@gmail.com
 address: 4 RUE DES FERMES 91700 SAINTE-GENEVIEVE-DES-BOIS
 address1: 179, route de Corbeil
 address2: 91700 Sainte-Geneviève-des-Bois
